Now it is displayed JAVA_HOME and ANDROID_ROOT to Option Window.

--- a/Cordova/Forms/SettingsDialog.ja.resx
+++ b/Cordova/Forms/SettingsDialog.ja.resx
@@ -118,14 +118,23 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="darkPathTree.Location" type="System.Drawing.Point, System.Drawing">
+    <value>18, 184</value>
+  </data>
+  <data name="darkPathTree.Size" type="System.Drawing.Size, System.Drawing">
+    <value>315, 87</value>
+  </data>
+  <data name="darkButtonOK.Location" type="System.Drawing.Point, System.Drawing">
+    <value>1, 280</value>
+  </data>
   <data name="darkButtonOK.Size" type="System.Drawing.Size, System.Drawing">
     <value>343, 23</value>
   </data>
   <data name="darkSectionPanelExcludeUnusedResourcesOption.Size" type="System.Drawing.Size, System.Drawing">
-    <value>345, 216</value>
+    <value>345, 304</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>345, 216</value>
+    <value>345, 304</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
